--- a/index.html
+++ b/index.html
@@ -49,26 +49,26 @@
         </ul>
     </section>
         <section>
-            <h3>Our Team</h3>
+            <h4>Our Team</h4>
             <ul>
                 <li>
-                    <img src="./images/Team-Card1.jpg" alt="Mark Guerrero" width="264" height="380">
+                    <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="380">
                     <h3>Mark Guerrero</h3>
                     <p>Product designer</p>
                 </li>
                 
                 <li>
-                    <img src="./images/Team-Card2.jpg" alt="Tom Ford" width="264" height="380">
+                    <img src="./images/img2.jpg" alt="Tom Ford" width="264" height="380">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/Team-Card3.jpg" alt="Camila Garcia" width="264" height="380">
+                    <img src="./images/img3.jpg" alt="Camila Garcia" width="264" height="380">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/Team-Card4.jpg" alt="Daniel Wilson" width="264" height="380">
+                    <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" height="380">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                 </li>
