--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </ul>
     </section>
         <section>
-            <h4>Our Team</h4>
+            <h2>Our Team</h2>
             <ul>
                 <li>
                     <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="380">
@@ -76,6 +76,7 @@
             
         </section> 
     </main>
+    <a href="./index.html">Webstudio</a>
     <!-- Footer -->
     <footer>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
