--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     </main>
    
     <!-- Footer --> 
-    <a href="./index.html">Webstudio</a>
+    <a href="">Webstudio</a>
     <footer>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
