--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <li>
                     <img src="./images/img1.jpg" alt="Mark Guerrero" width="264" height="380">
                     <h3>Mark Guerrero</h3>
-                    <p>Product designer</p>
+                    <p>Product Designer</p>
                 </li>
                 
                 <li>
@@ -78,8 +78,8 @@
     </main>
    
     <!-- Footer --> 
-    <a href="">Webstudio</a>
     <footer>
+        <a href="./index.html">Webstudio</a>
         <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
     
